# fairy-chess-api

./: LICENSE  README.md  pyproject.toml  requirements.txt
fairy-chess-api/: LICENSE.txt  README.md  pyproject.toml
fairy-chess-api/src/fairy_chess_api/: __about__.py
fairy-chess-api/tests/: __init__.py
fairy_chess/: config.py
fairy_chess/database/: __init__.py
fairy_chess/database/models/: user.py
fairy_chess/routers/: user.py
